--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "minigrep"
 version = "0.1.0"
+authros = ["Alexander Nookinov <anookinov@gmail.com>"]
 edition = "2018"
+description = "A minigrep application for Rust learning"
+license = "MIT OR Apache-2.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
